2022-12-25 Fojtik Jaroslav  <JaFojtik@yandex.com>

	* webp/src/webp/types.h Need to include inttypes.h


2022-12-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/symbols.h: Update symbol remappings which are enabled by
	PREFIX_MAGICK_SYMBOLS.  The only new symbol since the last release
	is IsEventLogged().

	* NEWS.txt: Updated the news.

2022-12-25 Fojtik Jaroslav  <JaFojtik@yandex.com>

	* jp2/* Update lib jasper to 1.900.16.

2022-12-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated the news.

	* coders/jxl.c (ReadJXLImage): Request that libjxl take care of
	any pre-multiplied alpha for us so we don't need to do it

2022-12-24 Fojtik Jaroslav  <JaFojtik@yandex.com>

	* jp2/* Update lib jasper to 1.900.5.

2022-12-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jxl.c: Support reading and writing ICC, EXIF, and XMP
	profiles.  Lots of code cleanup.
	* PerlMagick/t/jxl: Created some JXL sanity-test files.

2022-12-22 Fojtik Jaroslav  <JaFojtik@yandex.com>
	* VisualMagick/tests/runtest.bat Make binary directory configurable
	on one place. Report error when rwblob.exe does not exist.

2022-12-22 Fojtik Jaroslav  <JaFojtik@yandex.com>

	* jp2/* Update lib jasper from 1.900.1 to 1.900.2.

2022-12-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jxl.c (ReadJXLImage): Now based on
	ImportImagePixelArea().
	(WriteJXLImage): Now based on ExportImagePixelArea();

2022-12-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/msl.c (MSLEntityDeclaration): Report an error if
	xmlAddDocEntity() or xmlAddDtdEntity() fails.

	* coders/svg.c (SVGEntityDeclaration): Report an error if
	xmlAddDocEntity() or xmlAddDtdEntity() fails.

2022-12-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated the news.

	* magick/image.c (SetImageDepth): Restore is_monochrome and
	is_grayscale image flags.  Changing depth should not change the
	nature of 'gray'.
